[tool.poetry]
name = "Customer-Churn"
version = "0.1.0"
description = "This project aims to identify and predict the reasons for customer churn"
authors = ["Louis Bove <louisbove84@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
